--- a/templates/payments/index.html
+++ b/templates/payments/index.html
@@ -62,7 +62,8 @@
     <div class="card-body p-0">
         {% if payments %}
             <div class="table-responsive">
-                <table class="table table-dark table-hover table-striped mb-0">
+                {# Removed table-dark class for clean Atlantis design #}
+                <table class="table table-hover table-striped mb-0">
                     <thead>
                         <tr>
                             <th>رقم الدفعة</th>
